--- a/.env
+++ b/.env
@@ -46,14 +46,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=5f3e3280b0aa53
+MAIL_PASSWORD="530ebcd44bc405"
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS="noreply@127.0.0.1:8000:test"
+MAIL_FROM_NAME="MPC"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
